--- a/Frontend/css/login-and-register/login-and-register.css
+++ b/Frontend/css/login-and-register/login-and-register.css
@@ -92,6 +92,13 @@ h2 {
     box-sizing: border-box;
 }
 
+.email-password-note {
+    font-size: 12px;
+    color: #666;
+    margin-top: 5px;
+    font-style: italic;
+}
+
 .submit-btn {
     width: 100%;
     padding: 12px;
