--- a/Frontend/css/home-page.css
+++ b/Frontend/css/home-page.css
@@ -55,7 +55,7 @@ body {
 
 /* Article cards */
 .article-card {
-  border: 1px solid #e0e0e0;
+  border: 1px solid #000000;
   border-radius: 8px;
   overflow: hidden;
   transition: transform 0.2s ease, box-shadow 0.3s ease;
@@ -81,14 +81,14 @@ body {
 }
 
 .btn-primary {
-  background-color: #007bff; /* Blue for the primary button */
-  border-color: #007bff;
+  background-color: #000000; /* Blue for the primary button */
+  /* border-color: #007bff; */
   transition: background-color 0.3s ease, border-color 0.3s ease;
 }
 
 .btn-primary:hover {
-  background-color: #0056b3; /* Darker blue on hover */
-  border-color: #0056b3;
+  background-color: #323232; /* Darker blue on hover */
+  /* border-color: #0056b3; */
 }
 
 /* Alert messages */
