--- a/Frontend/css/article-detaile.css
+++ b/Frontend/css/article-detaile.css
@@ -33,10 +33,18 @@ h6 {
   object-fit: cover;
   width: 100%;
   border-radius: 1.25rem 1.25rem 0 0;
+  border-color: #a2a2a2;
+  border-style: solid;
+  border-width: 1px;
 }
 
 .card-body {
   padding: 2.5rem;
+  border-color: #a2a2a2;
+  border-style: solid;
+  border-width: 1px;
+  border-bottom-left-radius: 1.25rem;
+  border-bottom-right-radius: 1.25rem;
 }
 
 /* Buttons */
